--- a/popup.html
+++ b/popup.html
@@ -7,21 +7,25 @@
 </head>
     <body>
         <div id="firstScreen">
-            Welcome to FireChat!<br/>
+            <b>Welcome to FireChat!</b><br/><br/>
             
             Here you can chat with people on any website you visit.
-            Enjoy!
+            The app is currently in alpha testing, so let us know what you think!
+            <br/><br/>
+
+            <center><img src="./icon128.png"></img></center>
+
         </div>
         <div id="mainOutput">
             <div id='messagesDiv'></div>
         </div>
         <br/>
         <div id="mainInput">
-            <input type='text' id='nameInput' placeholder='Enter a new username!'>
-            <div id="currentSite"><b>Current Site: </b><span id="url"></span></div>
+            <center><input type="text" id="nameInput" placeholder="To begin, type a username and hit enter!"></center>
         </div> 
+        <div id="currentSite"><b>Current Site: </b><span id="url"></span></div>
         <div id="messageInput">
-            <input type='text' id='messageBox' placeholder='Message...'>
+            <input type='text' id='messageBox' placeholder='Type a message and hit Enter to send!'>
         </div>
         
     </body>
